fixed the disclosables being too wide problem and a toolbar.js bug I introduced.

--- a/targets/cb/_theme_assets/main.scss
+++ b/targets/cb/_theme_assets/main.scss
@@ -40,6 +40,10 @@ header.masthead {
     z-index: -1
 }
 
+.smartdown-container .disclosable-wrapper {
+  max-width: 80%;
+}
+
 /*
 header.masthead {
   .overlay {
